--- a/backend/.env
+++ b/backend/.env
@@ -5,3 +5,20 @@ USE_SQLITE=1
 ALLOWED_HOSTS=127.0.0.1,localhost,0.0.0.0
 CORS_ALLOWED_ORIGINS=http://127.0.0.1:5500,http://localhost:5500
 JWT_MINUTES=240
+TELEGRAM_BOT_TOKEN=8046777640:AAGzZWNDNYHHLSzuypnJbMNXDe_24fbklxA
+TELEGRAM_CHAT_ID=-1002978225147
+ADMIN_BASE_URL=http://127.0.0.1:8000
+
+# CSRF and CORS
+# Include your frontend origins and backend dev URL
+CSRF_TRUSTED_ORIGINS=http://127.0.0.1:5500,http://localhost:5500,http://127.0.0.1:8000,http://localhost:8000
+
+# Database (used when USE_SQLITE=0)
+POSTGRES_DB=depod
+POSTGRES_USER=depod
+POSTGRES_PASSWORD=depod
+POSTGRES_HOST=127.0.0.1
+POSTGRES_PORT=5432
+
+# Optional: bump to force admin static asset refresh
+# STATIC_ASSETS_VERSION=1
