--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,6 @@
 # Local dev defaults
 DEBUG=1
-SECRET_KEY=dev-secret-key-change-me
+SECRET_KEY==q##d0phf)x$x1j2%a&@y)t_6aq79j5xpbuyh#18%yh@f1!y+(
 USE_SQLITE=1
 ALLOWED_HOSTS=127.0.0.1,localhost,0.0.0.0
 CORS_ALLOWED_ORIGINS=http://127.0.0.1:5500,http://localhost:5500
