reset password and email telegram integration completed/

--- a/backend/.env
+++ b/backend/.env
@@ -22,3 +22,14 @@ POSTGRES_PORT=5432
 
 # Optional: bump to force admin static asset refresh
 # STATIC_ASSETS_VERSION=1
+
+DJANGO_EMAIL_BACKEND=django.core.mail.backends.smtp.EmailBackend
+EMAIL_HOST=smtp.gmail.com
+EMAIL_PORT=587
+EMAIL_HOST_USER=store.depod@gmail.com
+EMAIL_HOST_PASSWORD=kqyyiyesaffegrnm
+EMAIL_USE_TLS=true
+EMAIL_USE_SSL=false
+DEFAULT_FROM_EMAIL="Depod.az <store.depod@gmail.com>"
+SERVER_EMAIL="Depod.az <store.depod@gmail.com>"
+DEFAULT_NOTIFY_EMAIL=store.depod@gmail.com
