all done except payment method

--- a/backend/.env
+++ b/backend/.env
@@ -22,7 +22,7 @@ POSTGRES_PORT=5432
 
 # Optional: bump to force admin static asset refresh
 # STATIC_ASSETS_VERSION=1
-
+EMAIL_TIMEOUT=10 
 DJANGO_EMAIL_BACKEND=django.core.mail.backends.smtp.EmailBackend
 EMAIL_HOST=smtp.gmail.com
 EMAIL_PORT=587
