Refactor code structure for improved readability and maintainability

--- a/backend/.env
+++ b/backend/.env
@@ -35,3 +35,16 @@ SERVER_EMAIL="Depod.az <store.depod@gmail.com>"
 DEFAULT_NOTIFY_EMAIL=store.depod@gmail.com
 
  
+# OderoPay Sandbox
+ODERO_BASE_URL=https://sandbox-api-gateway.oderopay.com.tr
+ODERO_API_KEY=w29wL4JdISqMQwxwW1IX64SdBJJlcYS5
+ODERO_SECRET_KEY=ykoG1iR9OmAZ0TwUDwAXOApsoWCHv3QB
+ODERO_CURRENCY=TRY
+# Optional: hosted checkout base for browser redirect (if different from API gateway)
+# For Odero sandbox, use the hosted payment page base below:
+ODERO_PAYMENT_BASE_URL=https://sandbox-checkout.oderopay.com.tr
+# Frontend pages for redirects during local dev
+ODERO_SUCCESS_URL=http://127.0.0.1:5500/order-success.html
+ODERO_FAIL_URL=http://127.0.0.1:5500/order-failure.html
+ODERO_CANCEL_URL=http://127.0.0.1:5500/order-failure.html
+
